<resources>
    <string name="app_name">User Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_tracker">User Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="cancel">Cancel</string>
    <string name="start_trip">Start Trip</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="submit">Submit</string>
    <string name="pick_contacts">Pick Contacts</string>
    <string name="tracking_info">Tracking location</string>
    <string name="vibrate">Vibrate</string>
    <string name="normal">Normal</string>
    <string name="silent">Silent</string>
    <string name="DND">DND</string>
    <string name="voice_recording_not_supported">Voice recording not supported by device</string>
    <string name="trip_started">Trip Started</string>
    <string name="trip_terminated">Trip Terminated</string>
    <string name="emergency_message">You have Emergency Message</string>
    <string name="message">You have a Message</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="enter_user_name">Enter your user name</string>
    <string name="please_start_trip">In order to send message , please start the trip</string>
    <string name="invalid_input">Invalid input</string>
    <string name="select_start_location">Pick start point for trip</string>
    <string name="select_end_location">Pick end point for trip</string>
    <string name="select_trip_name">Enter trip name</string>
    <string name="select_contact">Select contact</string>
    <string name="select_profile">Select profile</string>
</resources>
